//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/timestamp.proto";
import "private/v1/metadata_type.proto";
import "shared/v1/condition_status_type.proto";

// Contains the details about the host pool that are available only for the system.
message HostPool {
  // Public data.
  string id = 1;
  Metadata metadata = 2;
  HostPoolSpec spec = 3;
  HostPoolStatus status = 4;
}

message HostPoolSpec {
  // Copies of the public fields.
  map<string, HostPoolHostSet> host_sets = 1;
}

message HostPoolStatus {
  // Copies of the public fields.
  HostPoolState state = 1;
  repeated string hosts = 2;
  repeated HostPoolCondition conditions = 3;
  map<string, HostPoolHostSet> host_sets = 4;
}

// Represents the overall state of a host pool.
enum HostPoolState {
  HOST_POOL_STATE_UNSPECIFIED = 0;
  HOST_POOL_STATE_PROGRESSING = 1;
  HOST_POOL_STATE_READY = 2;
  HOST_POOL_STATE_FAILED = 3;
}

// Types of conditions used to describe the status of host pool.
enum HostPoolConditionType {
  HOST_POOL_CONDITION_TYPE_UNSPECIFIED = 0;
  HOST_POOL_CONDITION_TYPE_PROGRESSING = 1;
  HOST_POOL_CONDITION_TYPE_READY = 2;
  HOST_POOL_CONDITION_TYPE_FAILED = 3;
  HOST_POOL_CONDITION_TYPE_DEGRADED = 4;
}

// Contains the details of a host pool condition.
message HostPoolCondition {
  HostPoolConditionType type = 1;
  shared.v1.ConditionStatus status = 2;
  google.protobuf.Timestamp last_transition_time = 3;
  optional string reason = 4;
  optional string message = 5;
}

// Contains the details of a host set within a host pool.
message HostPoolHostSet {
  // Host class identifier for hosts in this set.
  string host_class = 1;

  // Number of hosts for this host set.
  int32 size = 2;
}
