//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/field_mask.proto";
import "private/v1/host_pool_type.proto";

message HostPoolsListRequest {
  optional int32 offset = 1;
  optional int32 limit = 2;
  optional string filter = 3;
  optional string order = 4;
}

message HostPoolsListResponse {
  optional int32 size = 1;
  optional int32 total = 2;
  repeated HostPool items = 3;
}

message HostPoolsGetRequest {
  string id = 1;
}

message HostPoolsGetResponse {
  HostPool object = 1;
}

message HostPoolsCreateRequest {
  HostPool object = 1;
}

message HostPoolsCreateResponse {
  HostPool object = 1;
}

message HostPoolsDeleteRequest {
  string id = 1;
}

message HostPoolsDeleteResponse {}

message HostPoolsUpdateRequest {
  HostPool object = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message HostPoolsUpdateResponse {
  HostPool object = 1;
}

service HostPools {
  rpc List(HostPoolsListRequest) returns (HostPoolsListResponse) {}
  rpc Get(HostPoolsGetRequest) returns (HostPoolsGetResponse) {}
  rpc Create(HostPoolsCreateRequest) returns (HostPoolsCreateResponse) {}
  rpc Delete(HostPoolsDeleteRequest) returns (HostPoolsDeleteResponse) {}
  rpc Update(HostPoolsUpdateRequest) returns (HostPoolsUpdateResponse) {}
}
